--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
         <!-- // Customers -->
       </section>
     </main>
+
     <footer class="footer">
       <div class="footer-container container">
         <div class="footer-items">
@@ -443,6 +444,25 @@
               </a>
             </li>
           </ul>
+          <div class="footer-subs">
+            <p class="subs-text">Subscribe</p>
+            <form  class="footer-form">
+              <div class="footer-form-input">
+                <input
+                  type="email"
+                  class="footer-form-email"
+                  id="footer-email"
+                  placeholder="E-mail"
+                />
+              </div>
+              <button type="button" class="footer-btn btn">
+                Subscribe
+                <svg class="footer-btn-svg" width="24" height="20">
+                  <use href="/images/symbol-defs .svg#icon-Frame"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -505,6 +525,22 @@
               ></textarea>
             </div>
           </label>
+          <input
+            type="checkbox"
+            name="policy"
+            class="check visually-hidden"
+            id="checkbox-1"
+          />
+          <label for="checkbox-1" class="checkbox">
+            <span class="check-span">
+              <svg class="checkbox-svg" width="10" height="8">
+                <use href="/images/symbol-defs .svg#icon-Vector"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the&nbsp;
+            <a href="" class="check-policy">Privacy Policy</a>
+          </label>
+
           <button type="submit" class="form-btn btn">Send</button>
         </form>
       </div>
