--- a/index.html
+++ b/index.html
@@ -444,25 +444,26 @@
               </a>
             </li>
           </ul>
-          <div class="footer-subs">
-            <p class="subs-text">Subscribe</p>
-            <form  class="footer-form">
-              <div class="footer-form-input">
-                <input
-                  type="email"
-                  class="footer-form-email"
-                  id="footer-email"
-                  placeholder="E-mail"
-                />
-              </div>
-              <button type="button" class="footer-btn btn">
-                Subscribe
-                <svg class="footer-btn-svg" width="24" height="20">
-                  <use href="/images/symbol-defs .svg#icon-Frame"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
+        </div>
+        <div class="footer-subs">
+          <p class="subs-text">Subscribe</p>
+          <form class="footer-form">
+            <div class="footer-form-input">
+              <input
+                type="email"
+                class="footer-form-email"
+                name="user-email"
+                id="footer-email"
+                placeholder="E-mail"
+              />
+            </div>
+            <button type="submit" class="footer-btn btn">
+              Subscribe
+              <svg class="footer-btn-svg" width="24" height="20">
+                <use href="images/symbol-defs .svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
@@ -483,7 +484,7 @@
               <svg class="form-label-svg" width="18" height="24">
                 <use
                   class="form-labbel-icon"
-                  href="/images/symbol-defs .svg#icon-person"
+                  href="images/symbol-defs .svg#icon-person"
                 ></use>
               </svg>
             </div>
@@ -495,7 +496,7 @@
               <svg class="form-label-svg" width="18" height="24">
                 <use
                   class="form-labbel-icon"
-                  href="/images/symbol-defs .svg#icon-phone"
+                  href="images/symbol-defs .svg#icon-phone"
                 ></use>
               </svg>
             </div>
@@ -507,7 +508,7 @@
               <svg class="form-label-svg" width="18" height="24">
                 <use
                   class="form-labbel-icon"
-                  href="/images/symbol-defs .svg#icon-email"
+                  href="images/symbol-defs .svg#icon-email"
                 ></use>
               </svg>
             </div>
@@ -534,7 +535,7 @@
           <label for="checkbox-1" class="checkbox">
             <span class="check-span">
               <svg class="checkbox-svg" width="10" height="8">
-                <use href="/images/symbol-defs .svg#icon-Vector"></use>
+                <use href="images/symbol-defs .svg#icon-Vector"></use>
               </svg>
             </span>
             I accept the terms and conditions of the&nbsp;
