--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         <form class="modal-form">
           <label for="name" class="form-label"
             ><span class="form-label-name">Name</span>
-            <div class="form-label-container">
+            <span class="form-label-container">
               <input type="name" id="name" class="form-input" name="fullname" />
               <svg class="form-label-svg" width="18" height="24">
                 <use
@@ -487,11 +487,11 @@
                   href="images/symbol-defs .svg#icon-person"
                 ></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label for="phone" class="form-label"
             ><span class="form-label-name">Phone</span>
-            <div class="form-label-container">
+            <span class="form-label-container">
               <input type="tel" id="phone" class="form-input" name="phone" />
               <svg class="form-label-svg" width="18" height="24">
                 <use
@@ -499,11 +499,11 @@
                   href="images/symbol-defs .svg#icon-phone"
                 ></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label for="email" class="form-label"
             ><span class="form-label-name">Email</span>
-            <div class="form-label-container">
+            <span class="form-label-container">
               <input type="email" id="email" class="form-input" name="email" />
               <svg class="form-label-svg" width="18" height="24">
                 <use
@@ -511,11 +511,11 @@
                   href="images/symbol-defs .svg#icon-email"
                 ></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label for="Comment" class="form-label">
             <span class="form-label-name">Comment</span>
-            <div class="form-label-container">
+            <span class="form-label-container">
               <textarea
                 name="Comment"
                 id="Comment"
@@ -524,7 +524,7 @@
                 class="form-textarea"
                 placeholder="Text input"
               ></textarea>
-            </div>
+            </span>
           </label>
           <input
             type="checkbox"
