--- a/index.html
+++ b/index.html
@@ -480,7 +480,12 @@
           <label for="name" class="form-label"
             ><span class="form-label-name">Name</span>
             <span class="form-label-container">
-              <input type="name" id="name" class="form-input" name="fullname" />
+              <input
+                type="username"
+                id="name"
+                class="form-input"
+                name="fullname"
+              />
               <svg class="form-label-svg" width="18" height="24">
                 <use
                   class="form-labbel-icon"
