--- a/index.html
+++ b/index.html
@@ -518,14 +518,14 @@
               </svg>
             </span>
           </label>
-          <label for="Comment" class="form-label">
+          <label for="Comment" class="form-label last-label">
             <span class="form-label-name">Comment</span>
             <span class="form-label-container">
               <textarea
                 name="Comment"
                 id="Comment"
                 cols="30"
-                rows="5"
+                rows="8"
                 class="form-textarea"
                 placeholder="Text input"
               ></textarea>
